tools/gd/src/snapshots/gd__render__tests__snapshot_multi_file.snap
---
source: gd/src/render.rs
expression: strip(&output.lines)
---
── a.txt (Modified) ────────────────────────────────────────────────────────────
   1 |   1 | first
     |   2 |+second
── b.txt (Modified) ────────────────────────────────────────────────────────────
   1 |   1 | keep
   2 |     |-remove
