tools/gd/src/snapshots/gd__render__tests__snapshot_multi_hunk.snap
---
source: gd/src/render.rs
expression: strip(&output.lines)
---
── foo.rs (Modified) ───────────────────────────────────────────────────────────
   1 |   1 | line1
     |   2 |+added1
   2 |   3 | line2
   3 |   4 | line3
················································································
  10 |  11 | line10
     |  12 |+added2
  11 |  13 | line11
  12 |  14 | line12
