tools/gd/src/snapshots/gd__render__tests__snapshot_wrapped_long_line.snap
---
source: gd/src/render.rs
expression: strip(&output.lines())
---
── foo.txt (Modified) ──────────────────
   1 |   1 | ctx
     |   2 |+xxxxxxxxxxxxxxxxxxxxxxxxxx
     |     |↪xxxxxxxxxxxxxxxxxxxxxxxxxx
     |     |↪xxxxxxxxxxxxxxxxxxxxxxxxxx
     |     |↪xxxxxxxxxxxxxxxxxxxxxx
